Fix header when store name is too long

--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -8,6 +8,6 @@
   }
 
   .show-on-shrink {
-    display: flex;
+    display: initial;
   }
 }
